--- a/jamjamapp/templates/course/course.html
+++ b/jamjamapp/templates/course/course.html
@@ -4,11 +4,10 @@
 
 {% block head %}
 <title>너와 나의 달달한 소스, JamJam</title>
-
 {% endblock %}
 {% block contents %}
 <link href="{% static 'jamjamapp/css/course.css' %}" rel="stylesheet" />
-  
+
 <div class="course-body">
 
 
@@ -23,32 +22,30 @@
     
     <div id="popup" class="hide">
       <div class="content">
-        <p>
+          <div class="map1">
 
-          <img src="{% static 'jamjamapp/img/map.jpg' %}" alt="map" usemap="#popup_map" width="522" height="854">
+            <img src="{% static 'jamjamapp/img/map.jpg' %}" alt="" width="522" height="854"
+            style="position:fixed; top: 150px; left: 400px; z-index: 0;">
 
-          <map name="popup_map" id="popup_map">
-            <area shape="rect" coords="116,168,167,198" href="course_map.html" alt="서울" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="94,122,142,154" href="course_map.html" alt="인천" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="162,220,216,255" href="course_map.html" alt="경기" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="323,136,379,169" href="course_map.html" alt="강원" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="250,273,306,308" href="course_map.html" alt="충북" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="373,352,431,389" href="course_map.html" alt="경북" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="352,454,405,488" href="course_map.html" alt="대구" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="113,330,167,363" href="course_map.html" alt="충남" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="159,463,218,500" href="course_map.html" alt="전북" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="190,320,246,355" href="course_map.html" alt="세종" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="204,404,260,440" href="course_map.html" alt="대전" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="116,552,175,588" href="course_map.html" alt="광주" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="117,614,172,650" href="course_map.html" alt="전남" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="304,533,360,565" href="course_map.html" alt="경남" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="451,491,507,527" href="course_map.html" alt="울산" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="424,553,478,587" href="course_map.html" alt="부산" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-            <area shape="rect" coords="85,802,139,835" href="course_map.html" alt="제주" target="_self" onmouseover="document.body.style.cursor='pointer';" onmouseout="document.body.style.cursor='default';">
-          </map>
+            <div class="map-child" style="position: fixed;
+            transform: translate(-50%, -50%);
+            top: 330px; left: 560px; z-index: 2;">
+            <button class="region-where" onclick="showseoul()">서울</button>
+            </div>
 
-        </p>
-        <button onclick="closePopup()">닫기</button>
+          </div>
+
+          <div class="map2">
+            <ui class="region-name" id="seoul">
+
+            </ui>
+          </div>
+
+          <div class="map3">
+            <h2 style="margin-top: 50px;">지역을</h2><h2>선택하세요!</h2>
+          </div>
+        
+        <button class="map-close" onclick="closePopup()">닫기</button>
       </div>
     </div>
 
@@ -178,5 +175,6 @@
 </div>
 
 <script type="text/javascript" src="../static/jamjamapp/js/popup.js"></script>
+<script type="text/javascript" src="../static/jamjamapp/js/region.js"></script>
 
 {% endblock %}
