--- a/jamjamapp/static/jamjamapp/css/map.css
+++ b/jamjamapp/static/jamjamapp/css/map.css
@@ -1,26 +1,17 @@
-.popup_btn a {
-    display: inline-block;
-    padding: 20px;
-    background: darkred;
-    color: #fff;
-  }
-  
-  .overlay {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.7);
-    transition: opacity 500ms;
-    visibility: hidden;
-    opacity: 0;
-    z-index: 900;
-  }
-  
+
   .overlay:target {
     visibility: visible;
     opacity: 1;
   }
   
+  .map {
+    position: relative;
+  }
   
+  .map-child {
+    position: absolute;
+    width: auto;
+    top: 100px;
+    left: 200px;
+    z-index: 2;
+  }
