complete to make bookmark

--- a/jamjamapp/templates/login/signup.html
+++ b/jamjamapp/templates/login/signup.html
@@ -19,17 +19,17 @@
         <div class="signup-box">
             <div class="signup-content">
                 <label class="loginLabel">이메일주소</label>
-                <input type="text" required class="loginInput">
+                <input type="email" required class="loginInput">
                 <span class="spanOverlay"></span>
             </div>
             <div class="signup-content">
                 <label class="loginLabel">비밀번호</label>
-                <input type="text" required class="loginInput">
+                <input type="password" required class="loginInput">
                 <span class="spanOverlay"></span>
             </div>
             <div class="signup-content">
                 <label class="loginLabel">비밀번호확인</label>
-                <input type="text" required class="loginInput">
+                <input type="password" required class="loginInput">
                 <span class="spanOverlay"></span>
             </div>
 
@@ -207,7 +207,7 @@
             <div class="nick-number-con">
             <div class="signup-content">
                 <label class="loginLabel">전화번호</label>
-                <input type="text" required class="loginInput">
+                <input type="tel" required class="loginInput">
                 <span class="spanOverlay"></span>
             </div>
             <div class="signup-content">
